# flink-fingerprint

./: .gitignore  Dockerfile  Kiln_mapping.xlsx  README.md  docker-compose.yml  generate_fingerprints.py  input_sensor_data.json  main.py  output_fingerprint_format.json  pyproject.toml  start-flink.sh  start-pipeline.bat  stop-pipeline.bat
docker/: Dockerfile  docker-compose.yml  submit_job.py
outputs/: equip_analyse_state.json  fingerprints_20260203_171942_705419.jsonl  fingerprints_20260203_174736_319861.jsonl  fingerprints_20260203_180034_737091.jsonl  fingerprints_20260203_211806_968227.jsonl  kiln_mapping_llm_output_20260203_175936_289389.json  kiln_mapping_llm_output_20260203_211636_429804.json  llm_output_20260203_180034_708476.json  llm_output_20260203_211806_773963.json  tag_metadata.json  tag_uuid_map.json
scripts/: fingerprint_formatter.py
src/: __init__.py
src/data_input/: api.py  constants.py  helpers.py  kafka_test.py  kiln_data_producer.py  main.py  process_odr.py
src/data_input/files/cement/: General_cement_ind_db.json  Kiln_mapping.xlsx  cement_derived_params.json  cement_ind_db.json  cement_run_time_tags.json  cyclic_trend_tags.json  kiln_rules.json  kiln_rules_old.json
src/data_input/input/: alerts_dataframe_SCL_LINE_2_KILN_20260203_194926.csv
src/flink_job/: __init__.py  aggregations.py  fingerprint_job.py  job.py  kafka_config.py  models.py  serialization.py
src/flink_jobs/: fingerprint_job.py
src/generator/: __init__.py  data_generator.py
src/llm_inference/: llm_equip_analyse.py  llm_job.py  llm_snapshot_test.py  prompt.txt
src/postprocess/: __init__.py  convert_fingerprints.py  save_fingerprints.py
src/utils/: config.py
