[project]
name = "flink-fingerprint"
version = "0.1.0"
description = "PyFlink streaming fingerprint generation for equipment sensors"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "kafka-python>=2.0.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
flink = [
    "apache-flink>=1.18.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88
